--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 .body {
     position: absolute;
-    top: 100px;
+    left:30%;
+    top: 20%;
     height: 1000px;
     background: #0b0630;
     color: white;
-    width: 100%;
+    width: 65%;
 }
 body {
     margin: 0;
@@ -23,7 +24,7 @@ body {
 .title {
     width: 40%;
     position: absolute;
-    top: 30%;
+    bottom: 30%;
     left: 40%;
     font-size: 40px;
     /* тут шрифт */
@@ -33,13 +34,18 @@ body {
     font-family: 'Press Start 2P', cursive;
     /* font-size: 10px; */
     position: absolute;
-    bottom: 20%;
+    bottom: 30%;
     right: 5%;
 }
 .menu a{
-    color: #89f6f9;
+    color: #cc3495;
     font-size: 15px;
+    text-decoration: none;
     /* top: 40%; */
+}
+
+.menu a:hover{
+    color: #f8e3c4;
 }
 
 .cat {
