--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@ body {
     /* тут шрифт */
     font-family: 'Press Start 2P', cursive;
 }
+
+.title a{
+    text-decoration: none;
+}
+.title a:hover{
+    color: #f8e3c4;    
+}
 .menu {
     font-family: 'Press Start 2P', cursive;
     /* font-size: 10px; */
@@ -54,7 +61,9 @@ body {
     left: 5%;
     width: 300px;
     height: 600px;
-    background: #ff0000;
+    border: 4px solid;
+    border-color: #cc3495;
+    background: #0b0630;
 }
 
 .basket {
@@ -65,4 +74,10 @@ body {
     background: #0b0630;
     color: white;
     width: 90%;
+}
+
+.title_item {
+    font-family: 'Press Start 2P', cursive;
+    size: 20;   
+    color: #f8e3c4;
 }
