--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,14 @@
     position: absolute;
     left:30%;
     top: 20%;
-    height: 1000px;
-    background: #0b0630;
+    background: #06031a;
     color: white;
     width: 65%;
+    border: 4px solid;
+    border-color: #cc3495;
 }
 body {
+    background: #0b0630;
     margin: 0;
 }
 .header {
@@ -56,14 +58,19 @@ body {
 }
 
 .cat {
-    position: absolute;
+    position: absolute; 
     top: 20%;
     left: 5%;
     width: 300px;
     height: 600px;
     border: 4px solid;
     border-color: #cc3495;
-    background: #0b0630;
+    background: #06031a;
+}
+
+.text_cat{
+    margin-top: 10%;
+    margin-left: 10%;
 }
 
 .basket {
@@ -77,7 +84,40 @@ body {
 }
 
 .title_item {
+    margin-top: 5%;
     font-family: 'Press Start 2P', cursive;
     size: 20;   
     color: #f8e3c4;
 }
+
+.title_item a{
+    text-decoration: none;   
+}
+
+.title_item a:hover{
+    text-decoration: none;
+    color: #cc3495;   
+}
+input{
+    border: 2 px solid #cc3495;
+    background: #06031a; 
+    height: 30px;
+    width: 150px;
+    color: #f8e3c4;
+    font-size: 10px;
+    font-family: 'Press Start 2P', cursive;
+
+}
+
+.login {
+    color: #f8e3c4;
+    font-size: 20px;
+    font-family: 'Press Start 2P', cursive;   
+}
+
+a .title_item {
+    font-family: 'Press Start 2P', cursive;
+    size: 20;   
+    color: #f8e3c4;
+}
+
